@@ -1,0 +1,1 @@
+*.visualdproj eol=crlf
